force-app/main/default/objects/Activity_Report__c/Activity_Report__c.object-meta.xml
<CustomObject>
    <label>Activity Report</label>
    <nameField>
        <displayFormat>Act-{0000}</displayFormat>
        <label>Activity Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>