force-app/main/default/objects/Activity_Report__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Name</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Activities Report</relationshipLabel>
    <relationshipName>Activities_Report</relationshipName>
    <type>Lookup</type>
</CustomField>