force-app/main/default/objects/Activity_Report__c/fields/Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Partner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities_Report</relationshipName>
    <type>Lookup</type>
</CustomField>