force-app/main/default/objects/Activity_Report__c/fields/Raraunga_Kaunga_Question1__c.field-meta.xml
<CustomField>
    <fullName>Raraunga_Kaunga_Question1__c</fullName>
    <label>Q1.</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>