force-app/main/default/objects/Activity_Report__c/fields/Reporting_date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_date__c</fullName>
    <label>Reporting date</label>
    <type>Date</type>
</CustomField>