force-app/main/default/objects/Activity_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Activity_Name__c</columns>
    <columns>Reporting_date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>